docs/grammar.ebnf
(* situ grammar, v0.
 *
 * Extracted from project.md section 7 and kept in sync with it. Where the two
 * disagree, project.md is authoritative and this file is the bug.
 *
 * Alternatives are tab-indented rather than column-aligned, because no tab
 * width is prescribed in this project and column alignment would not survive
 * one (docs/decisions/0003-source-formatting.md).
 *
 * A production marked PHASE n is not accepted by the parser yet; the front end
 * rejects it with a "not yet implemented" diagnostic naming that phase.
 *)

schema		= { directive | decl } ;

directive	= "target" target_kind ";"
	| "endian" endian ";"
	| "bit_order" bitorder ";"
	| "strictness" "=" strictness ";"
	| "import" string ";" ;

target_kind	= "buffer" | "mmio" ;
endian		= "big" | "little" | "native" ;
bitorder	= "msb_first" | "lsb_first" ;
strictness	= "strict" | "lenient" ;

(* One level only; nesting is rejected naming its phase. See
 * docs/decisions/0012-namespaces.md. *)
namespace_decl	= "namespace" ident "{" { decl } "}" ;

(* A register lowers to a struct carrying its bus facts; `register_block`
 * declares the settings once and disappears. See section 15.2. *)
register_decl	= "register" ident [ "@" number ] "{" { reg_setting | member } "}" ;
register_block_decl = "register_block" ident "{" { reg_setting | register_decl } "}" ;
reg_setting	= ( "width" | "access_width" ) "=" number ";"
	| ( "volatile" | "no_rmw" ) ";" ;
qualified	= [ ident "::" ] ident ;

decl		= namespace_decl
	| const_decl
	| enum_decl
	| struct_decl
	| endian_marker_decl
	| codec_decl			(* PHASE 7 *)
	| register_decl
	| register_block_decl
	| requirement
	| invariant ;

const_decl	= "const" ident "=" expr ";" ;

enum_decl	= "enum" ident ":" scalar_type "{" enum_body "}" ;
enum_body	= { ident "=" expr "," } [ "default" "=" ( "error" | "pass" ) ] ;

struct_decl	= "struct" ident [ attrs ] "{" { member } "}" ;

member		= field | reserved | marker_field | block | variant | tag_field ;

field		= [ radix ] type_ref ident [ array_spec ] [ until | repeat ]
		  [ pin ] [ attrs ] ";" ;
repeat		= "while" "(" expr ")" [ "max" expr ] ;	(* section 8.6.6 *)
radix		= "decimal" | "hex" ;		(* section 8.6.2 *)
reserved	= "reserved" scalar_type [ array_spec ] [ attrs ] ";" ;
(* The name is optional and defaults to the keyword, so an unnamed tag is
 * `tag` and an unnamed sealed region is `sealed` -- which is what lets
 * `require verify_gated(Packet.sealed)` resolve in example 5.3. See
 * docs/decisions/0010-region-and-tag-names.md. *)
tag_field	= ( "tag" | "checksum" ) scalar_type [ ident ] array_spec
		  [ "covers" "(" ref_list ")" ] [ attrs ] ";" ;

block		= "positional" "{" { member } "}"
	| "authenticated" [ ident ] [ attrs ] "{" { member } "}"
	| "sealed" [ ident ] "(" codec_args ")" [ attrs ] "{" { member } "}"
	| "coded" ident "(" codec_args ")" [ until ] [ attrs ] "{" { member } "}"
	| "indexed" "(" index_args ")" "{" { member } "}"		(* PHASE 6 *)
	| "opaque" ident "[" size_expr "]" [ attrs ] ";"		(* PHASE 6 *)
	| "tlv" ident "(" tlv_args ")" [ attrs ] ";" ;			(* PHASE 6 *)

variant		= "variant" ident "switch" "(" expr ")" "{"		(* PHASE 6 *)
		{ "case" expr ":" member }
		[ "default" ":" ( member | "error" | "opaque" ) ]
	"}" ;

(* array_spec and attrs both open with "[", so this grammar is ambiguous as
 * written: `u8 x [foo];` is either an array of `foo` elements or a scalar
 * carrying the flag `foo`. Resolved by the closed attribute vocabulary in
 * docs/decisions/0006-bracket-disambiguation.md -- a bracket group is attrs
 * when it holds "=" or "," at depth 1, or a lone known attribute name. *)
array_spec	= "[" [ size_expr ] "]" ;
size_expr	= expr | "remaining" ;

(* Section 8.6.1. Where a member ends when no length says so. The
 * delimiter is a string literal rather than an expression: it would
 * otherwise have to be evaluated against the data it is being looked for
 * in. `max` bounds the scan. *)
until		= "until" string [ "max" expr ] ;
pin		= "@" expr ;

attrs		= "[" attr { "," attr } "]" ;
attr		= ident [ "=" expr ] ;

type_ref	= scalar_type | ident ;
scalar_type	= uint | sint | float | bitfield | "bool" | "byte" ;
uint		= "u" digits ;		(* u1..u64, non-power-of-2 allowed *)
sint		= "i" digits ;
float		= "f16" | "f32" | "f64" ;
bitfield	= "bit" ;		(* single bit; uN < 8 also bit-packed *)

codec_decl	= "codec" ident "{" { codec_prop ";" } "}" ;		(* PHASE 7 *)
codec_prop	= "length_preserving"
	| "expansion" "=" ( "+" digits | "unbounded" | ratio )
	| "granularity" "=" ( "byte" | "block" "(" digits ")" | "stream" )
	| [ "not" ] "seekable"
	| "authenticated" | "invertible" | "deterministic"
	| "kernel" "=" kernel ;

(* Section 13.4. A kernel derives both the signature and the implementation,
 * which is the whole difference between the two codec tiers. *)
kernel		= kernel_family [ "(" [ attr { "," attr } ] ")" ] ;
kernel_family	= "table" | "polynomial" | "linear_block"
	| "shift_register" | "permutation" | "stuffing" ;

(* Properties compose pointwise and conservatively. *)
pipeline_decl	= "codec" ident "=" stage { "|>" stage } ";" ;
stage		= ident [ "(" { ? any ? } ")" ] ;

requirement	= ( "require" | "assert" ) capability_expr ";" ;

(* One field, and what it derives from. The left side is a path rather than an
 * expression: an invariant says which field situ maintains, and an equality
 * nobody maintains is what `require` already is. See section 16.1. *)
invariant	= "invariant" path "==" expr ";" ;
path		= ident { "." ident } ;


(* --------------------------------------------------------------------------
 * Productions described elsewhere in project.md but absent from section 7.
 * Listed here so the gap is visible rather than discovered during the phase
 * that needs them. Surface syntax below is taken from the worked examples and
 * is not yet normative; each needs a decision record before its phase.
 * -------------------------------------------------------------------------- *)

(* Section 8.1.1, PHASE 6 *)
varint_decl	= "varint_type" ident "{" { varint_prop ";" } "}" ;
varint_prop	= "encoding" "=" ident
	| "transform" "=" ident
	| "max_bits" "=" digits
	| "minimal" ;

(* Section 8.3. Exactly two members, named `little` and `big`: naming them
 * anything else would leave the compiler guessing which is which, and a wrong
 * guess here is undetectable at runtime. The backing type must be a whole
 * number of bytes, because the marker is read before its own byte order is
 * known. *)
endian_marker_decl = "endian_marker" ident ":" scalar_type "{"
	"little" "=" expr ","
	"big" "=" expr [ "," ]
"}" ;

(* A struct declares the marker's storage, and scopes itself to it. *)
marker_field	= "endian_marker" ident [ attrs ] ";" ;
endian_from	= "endian" "=" "from" "(" ident ")" ;

(* Section 13.1, PHASE 7. The signature and its implementation are separate
 * declarations, which is what makes a built-in algorithm replaceable. *)
impl_decl	= "impl" ident ( "derived" | "extern" string ) ";" ;

(* Section 15.2, PHASE 10 *)
register_decl	= "register" ident [ pin ] "{" { register_member } "}" ;
register_member	= ( "width" | "access_width" ) "=" digits ";"
	| "volatile" ";"
	| "no_rmw" ";"
	| field
	| reserved ;

(* Referenced by the productions above but never given in section 7. *)
ref_list	= ident { "," ident } ;
codec_args	= ident { "," attr } ;
index_args	= attr { "," attr } ;
tlv_args	= attr { "," attr } ;
capability_expr	= ident "(" expr { "," expr } ")" | expr ;
ratio		= "ratio_exact" "(" digits "," digits ")"
	| "ratio_bounded" "(" digits "," digits ")" ;
ident		= letter { letter | digit | "_" } ;
digits		= digit { digit | "_" } ;
