situc/parser.py
"""Recursive-descent parser producing a well-formed AST.

Scope is the phase 1 static subset (project.md section 26.1). Every construct
belonging to a later phase is recognised by keyword and rejected with a
diagnostic naming the phase that will accept it, so a user meeting one knows
whether to wait or to rewrite the schema.

Hand-written rather than generated: no dependency (decision 0001), and the
diagnostics are the product.
"""

from __future__ import annotations

from dataclasses import dataclass, replace
from enum import Enum
from collections.abc import Callable
from typing import TypeVar

from situc import ast, kernels, namespaces, wellformed
from situc.types import BITS_PER_BYTE
from situc.diagnostics import Source, Span, error, not_yet_implemented
from situc.lexer import Token, TokenKind, tokenize
from situc.types import TEXT_ENCODINGS, WidthError, lookup, literal_bytes


EnumT = TypeVar("EnumT", bound=Enum)


@dataclass
class _CodecProperties:
	"""Accumulator for a codec body.

	Every default is the conservative one: a signature that says nothing claims
	nothing, which is the only safe reading of silence in a declaration the
	compiler cannot verify.
	"""

	expansion: ast.Expansion	= ast.Expansion.PRESERVING
	expansion_add: int		= 0	# BITS, per 0046
	ratio: tuple[int, int] | None	= None
	seekable: ast.Seekable		= ast.Seekable.NONE
	granularity: ast.Granularity	= ast.Granularity.STREAM
	granularity_size: int | None	= None
	systematic: bool		= False
	authenticated: bool		= False
	invertible: bool		= False
	deterministic: bool		= False
	error_propagating: bool		= False
	has_kernel: bool		= False
	kernel: ast.Kernel | None	= None
	pipeline: tuple[str, ...]	= ()
	tag_bytes: int | None		= None
	nonce_bytes: int | None		= None

	def build(self, span: Span, name: str) -> ast.CodecDecl:
		return ast.CodecDecl(
			span              = span,
			name              = name,
			expansion         = self.expansion,
			expansion_add     = self.expansion_add,
			ratio             = self.ratio,
			seekable          = self.seekable,
			granularity       = self.granularity,
			granularity_size  = self.granularity_size,
			systematic        = self.systematic,
			authenticated     = self.authenticated,
			invertible        = self.invertible,
			deterministic     = self.deterministic,
			error_propagating = self.error_propagating,
			has_kernel        = self.has_kernel,
			kernel            = self.kernel,
			pipeline          = self.pipeline,
			tag_bytes         = self.tag_bytes,
			nonce_bytes       = self.nonce_bytes,
		)


def _spelled(text: str, quote: str) -> str:
	"""A literal as the schema wrote it, quotes and escapes included.

	Kept so the unparser can print `','` for a schema that wrote `','`
	rather than the `","` the bytes alone would give. The same idea as
	`IntLiteral.text`: a spelling that means the identical thing is still
	the author's, and a round trip that loses it has lost something nobody
	can get back.
	"""
	out = []
	for char in text:
		if char == "\\" or char == quote:
			out.append("\\" + char)
		elif char == "\n":
			out.append("\\n")
		elif char == "\t":
			out.append("\\t")
		elif char == "\r":
			out.append("\\r")
		elif char == "\0":
			out.append("\\0")
		elif " " <= char <= "~":
			out.append(char)
		else:
			# Escaped, including a character that IS a character: a
			# delimiter's bytes come from latin-1, so 0xC0 is `A` with a
			# grave accent and printing it raw would put a non-ASCII byte in
			# a `.situ` file AND change what the literal means under any
			# other encoding. `\xE9` re-parses to the same byte and says
			# which byte it is, which is what a binary delimiter needs.
			out.append(f"\\x{ord(char):02X}")
	return quote + "".join(out) + quote


def evaluate_literal(expr: ast.Expr) -> int | None:
	"""An integer literal, or None. Used where a property must be a constant
	the parser can see, rather than an expression a later pass folds."""
	return expr.value if isinstance(expr, ast.IntLiteral) else None

# Constructs recognised but not yet accepted, mapped to the phase that adds
# them (project.md section 26). Keyed by the keyword that introduces one.
FUTURE_CONSTRUCTS: dict[str, tuple[int, str]] = {}

# The settings a register or a register block may declare, from section 15.2.
REGISTER_SETTINGS = frozenset({"width", "access_width", "volatile", "no_rmw"})


@dataclass
class _RegisterDefaults:
	"""Scoped defaults, which a `register_block` sets once for what it holds."""

	width: int | None        = None
	access_width: int | None = None
	volatile: bool           = True		# implicit under `target mmio` (15.1)
	no_rmw: bool             = False

	def copy(self) -> _RegisterDefaults:
		return _RegisterDefaults(self.width, self.access_width,
		                        self.volatile, self.no_rmw)

# The attribute vocabulary is closed and fixed by the language, which is what
# makes `[` decidable: see disambiguate_bracket and
# doc/decision/0006-bracket-disambiguation.md. Names for later phases are
# listed now so the disambiguation does not change meaning as phases land.
ATTRIBUTE_NAMES = frozenset({
	# section 8.2 - 8.6: layout and representation
	"allow_straddle", "require_aligned", "encoding", "nul_terminated",
	"endian", "bit_order", "size",
	# doc/decision/0054: what makes a recursive type describable. `depth` is
	# the format's own limit and `limit` is this build's cap, and they are two
	# names because a message deeper than the first is malformed while one
	# deeper than the second is well formed and refused anyway.
	"depth", "limit",
	# section 8.1: a packed-decimal field narrower than its digits, which is
	# what a register holding a control bit above the decimal is
	"bits",
	# section 8.6.1: how a delimiter is made inert inside the content
	"quoted", "escape",
	# section 8.6.2: one spelling per value for a text number
	"minimal",
	# section 8.6.4: what a delimited value ignores
	"trim", "case_insensitive",
	# section 19.4: one file, more than one version of the protocol
	"since", "version",
	# decision 0050: a `parameter` fixed for a stream rather than varying
	# per message, which is what lets it reach an expression that moves a
	# member -- a dissector can carry a per-stream fact as a preference and
	# cannot carry a per-message one at all.
	"stream",
	# section 11.5: a weakening the lattice cannot derive
	"non_canonical",
	# section 8.3: host-dependent byte order
	"allow_host_dependent",
	# section 8.8: reserved behaviour
	"must_be_zero", "must_be_one", "preserve", "unknown",
	# section 5.1 and 18.2: constraints
	"must_eq", "max", "min",
	# section 17.0: variant arm padding
	"equalize",
	# 26.98: the retransmission and timing contract of an exchange, on the
	# relation that already identifies one. Both endpoints must agree on
	# these, which is why they are schema rather than a command-line flag
	# (decision 0032).
	"timeout_ms", "retries",
	# section 14: cryptographic model
	"secret", "nonce", "covers", "allow_unverified_read", "trusted",
	# section 14.2: a checksum that covers its own bytes, taken as this
	"self_as",
	# decision 0038: a tag deliberately narrower than the one its codec
	# produces, which OSCORE does on constrained links
	"truncated",
	# section 15.2: register access modes and side effects (phase 10)
	"rw", "ro", "wo", "w1c", "w0c", "w1s", "w0s", "rc", "rs", "wo_once", "rsvd",
	"on_read", "on_write", "volatile", "no_rmw",
})

#: Section 8.6.2. The base a text-encoded number is written in. Two, because
#: these are the two that appear in the protocols this targets; a third would
#: need a reason beyond being arithmetically possible.
RADIX_KEYWORDS = {"decimal": 10, "hex": 16}

#: `scaled i64 v until ","` -- base ten, and a point and an exponent
#: allowed (0056). In the radix slot because that is what it is: a
#: number written as text, whose scalar names the value's domain.
SCALED_KEYWORD = "scaled"

KERNEL_FAMILIES	= {family.value: family for family in ast.KernelFamily}
TARGET_KINDS	= {kind.value: kind for kind in ast.TargetKind}
STRICTNESS	= {level.value: level for level in ast.Strictness}
ENDIANS		= {endian.value: endian for endian in ast.Endian}
BIT_ORDERS	= {order.value: order for order in ast.BitOrder}
ENUM_DEFAULTS	= {default.value: default for default in ast.EnumDefault}
SEVERITIES	= {level.value: level for level in ast.Severity}

# Binary operator precedence, loosest first. Section 10 permits arithmetic and
# bitwise operators everywhere, comparison and boolean operators in constraints
# only; that restriction is a later pass's to enforce, not the parser's.
PRECEDENCE: tuple[tuple[str, ...], ...] = (
	("||",),
	("&&",),
	("|",),
	("^",),
	("&",),
	("==", "!="),
	("<", ">", "<=", ">="),
	("<<", ">>"),
	("+", "-"),
	("*", "/", "%"),
)

UNARY_OPS = ("-", "~", "!")


class Parser:
	def __init__(self, source: Source) -> None:
		self.source = source
		self.tokens = tokenize(source)
		#: What the `encoding` directive has said so far. A delimiter written
		#: as a character is resolved as the parser reads it, so this is
		#: state rather than a later pass -- and `check_encoding_place`
		#: refuses a directive that arrives after a struct, which is what
		#: keeps "so far" and "the file's" the same thing.
		self.encodings: tuple[str, ...] = ("ascii",)
		#: What `whitespace` has declared, for a bare `skip` to mean. Empty
		#: until a directive says otherwise, and a bare `skip` with nothing
		#: here is refused rather than given a set somebody guessed.
		self.whitespace: tuple[int, ...] = ()
		self.whitespace_shown: tuple[str, ...] = ()
		self.pos    = 0
		# Set by `codec X extern { ... }`, which implies its own binding. The
		# implied impl is appended after the declaration so both spellings of a
		# binding reach the same place.
		self._pending_extern: tuple[str, Span] | None = None
		# A tlv region's item grammar, filled in as its argument list is read
		# and collected when the region node is built.
		self._tag_decode: tuple[ast.TagPart, ...] = ()
		self._value_size: ast.ValueSize | None    = None
		self._known: tuple[ast.KnownTag, ...]     = ()
		# A `register_block` lowers to several declarations; the rest are
		# handed back one at a time here.
		self._pending_block: list[ast.Decl] = []

	# -- token access ---------------------------------------------------

	@property
	def current(self) -> Token:
		return self.tokens[self.pos]

	def peek(self, ahead: int = 1) -> Token:
		return self.tokens[min(self.pos + ahead, len(self.tokens) - 1)]

	def advance(self) -> Token:
		token = self.tokens[self.pos]
		if token.kind is not TokenKind.EOF:
			self.pos += 1
		return token

	def accept_symbol(self, *symbols: str) -> Token | None:
		if self.current.is_symbol(*symbols):
			return self.advance()
		return None

	def accept_ident(self, *names: str) -> Token | None:
		if self.current.is_ident(*names):
			return self.advance()
		return None

	def expect_symbol(self, symbol: str, context: str) -> Token:
		token = self.accept_symbol(symbol)
		if token is None:
			raise error(
				f"expected `{symbol}` {context}, found {self.current.describe()}",
				self.current.span,
				label = f"expected `{symbol}` here",
			)
		return token

	def expect_ident(self, context: str) -> Token:
		if self.current.kind is not TokenKind.IDENT:
			raise error(
				f"expected {context}, found {self.current.describe()}",
				self.current.span,
				label = f"expected {context} here",
			)
		return self.advance()

	def expect_keyword(self, name: str, context: str) -> Token:
		token = self.accept_ident(name)
		if token is None:
			raise error(
				f"expected `{name}` {context}, found {self.current.describe()}",
				self.current.span,
				label = f"expected `{name}` here",
			)
		return token

	def span_from(self, start: Token) -> Span:
		return Span(self.source, start.span.start, self.tokens[self.pos - 1].span.end)

	# -- schema ---------------------------------------------------------

	def parse(self) -> ast.Schema:
		schema = ast.Schema(Span(self.source, 0, len(self.source.text)))

		while self.current.kind is not TokenKind.EOF or self._pending_block:
			if self._pending_block:
				schema.decls.append(self._pending_block.pop(0))
				continue
			schema.decls.append(self.parse_decl())
			if self._pending_extern is not None:
				name, span = self._pending_extern
				schema.decls.append(
					ast.ImplDecl(span, name, ast.ImplKind.EXTERN, None))
				self._pending_extern = None

		return schema

	def finish(self, schema: ast.Schema) -> ast.Schema:
		"""The passes that need a *whole* schema.

		Separated from reading declarations so that `import` can splice in
		another file's before any of them run: `wellformed.check` over a file
		whose imported types have not arrived yet would refuse names that are
		about to exist, and `namespaces.flatten` would flatten half a schema.
		"""
		namespaces.flatten(schema)
		kernels.resolve_signatures(schema)
		_widen_byte_enum_fields(schema)
		wellformed.check(schema)
		return schema

	def parse_decl(self) -> ast.Decl:
		token = self.current

		if token.kind is not TokenKind.IDENT:
			raise error(
				f"expected a declaration, found {token.describe()}",
				token.span,
				label = "expected `struct`, `enum`, `const`, a directive or a requirement",
			)

		future = FUTURE_CONSTRUCTS.get(token.text)
		if future is not None:
			phase, described = future
			raise not_yet_implemented(described, token.span, phase)

		if token.text == "register_block":
			# The one declaration that lowers to several, so it cannot go in
			# the table below.
			self._pending_block = self.parse_register_block()
			return self._pending_block.pop(0)

		handlers: dict[str, Callable[[], ast.Decl]] = {
			"namespace":	self.parse_namespace,
			"register":	self.parse_register,
			"target":	self.parse_target,
			"endian":	self.parse_endian,
			"bit_order":	self.parse_bit_order,
			"encoding":	self.parse_encoding,
			"whitespace":	self.parse_whitespace,
			"strictness":	self.parse_strictness,
			"import":	self.parse_import,
			"const":	self.parse_const,
			"enum":		self.parse_enum,
			"tokens":	self.parse_tokens,
			"struct":	self.parse_struct,
			"endian_marker": self.parse_endian_marker,
			"varint_type":	self.parse_varint,
			"codec":	self.parse_codec,
			"impl":		self.parse_impl,
			"require":	self.parse_requirement,
			"assert":	self.parse_requirement,
			"invariant":	self.parse_invariant,
			"when":		self.parse_when,
			"relation":	self.parse_relation,
		}

		handler = handlers.get(token.text)
		if handler is None:
			# Spelled from the table rather than written out beside it. The
			# hand-written list had gone nine declarations stale -- it named
			# neither `codec` nor `impl` nor `register`, so an author asking
			# the compiler what it takes was told a subset of it, which is
			# what an unproduced diagnostic loses (26.215).
			spelled = ", ".join(
				f"`{name}`"
				for name in sorted({*handlers, "register_block"}))
			raise error(
				f"unknown declaration `{token.text}`",
				token.span,
				label = "not a declaration keyword",
				notes = [f"expected one of {spelled}"],
			)

		return handler()

	# -- directives -----------------------------------------------------

	def parse_target(self) -> ast.TargetDirective:
		start = self.advance()
		token = self.expect_ident("a target kind")
		kind  = TARGET_KINDS.get(token.text)
		if kind is None:
			raise error(
				f"unknown target `{token.text}`",
				token.span,
				label = "expected `buffer`, `mmio` or `file`",
			)

		append = False
		if self.current.is_ident("append"):
			flag = self.advance()
			if kind is not ast.TargetKind.FILE:
				raise error(
					f"`append` means nothing under `target {kind.value}`",
					flag.span,
					label = "only a file grows",
					notes = ["`append` makes the top-level extent growable and "
					         "every address `Unstable`; a buffer's extent is "
					         "the caller's and a register's is fixed by the bus"],
				)
			append = True

		self.expect_symbol(";", "after the target directive")
		return ast.TargetDirective(self.span_from(start), kind, append)

	def parse_endian(self) -> ast.EndianDirective:
		start  = self.advance()
		token  = self.expect_ident("an endianness")
		endian = ENDIANS.get(token.text)
		if endian is None:
			raise error(
				f"unknown endianness `{token.text}`",
				token.span,
				label = "expected `big`, `little` or `native`",
			)
		self.expect_symbol(";", "after the endian directive")
		return ast.EndianDirective(self.span_from(start), endian)

	def parse_register(self, defaults: _RegisterDefaults | None = None
			) -> ast.StructDecl:
		"""`register ctrl @ 0x00 { width = 32; ... bit enable [rw]; }`

		Lowered straight to a `StructDecl` carrying a `RegisterInfo`. A register
		*is* a struct -- a fixed-width container of fields at an offset -- so
		the layout solver, the lattice and the capability map all work on one
		unchanged, and only the backend needs to know it is emitting bus
		transactions (section 15.1).
		"""
		start   = self.advance()
		name    = self.expect_ident("a register name")
		address = None

		if self.accept_symbol("@") is not None:
			token   = self.current
			address = evaluate_literal(self.parse_expr())
			# `address < 0` cannot fire: `evaluate_literal` folds nothing,
			# so `@ -4` is a unary expression and arrives as None like any
			# other non-literal. The message is right for every input that
			# reaches it, which is why producing it is what settled this
			# and reading it was not (26.366).
			if address is None or address < 0:
				raise error("a register address must be a literal", token.span,
				            label="expected a number such as `0x00`")

		self.expect_symbol("{", "to open the register body")

		settings = _RegisterDefaults() if defaults is None else defaults.copy()
		members: list[ast.Member] = []

		while not self.current.is_symbol("}"):
			if self.current.kind is TokenKind.EOF:
				raise error("unexpected end of file inside a register",
				            self.current.span, label="expected `}`")
			if self._is_register_setting():
				self.parse_register_setting(settings)
				continue
			members.append(self.parse_member())

		self.expect_symbol("}", "to close the register body")
		span = self.span_from(start)

		if settings.width is None:
			raise error(f"register `{name.text}` declares no `width`", span,
			            label="expected `width = N;` in the body",
			            notes=["a register's width is the size of the object on "
			                   "the bus, and nothing else implies it"])
		if settings.access_width is None:
			raise error(f"register `{name.text}` declares no `access_width`", span,
			            label="expected `access_width = N;` in the body",
			            notes=["`target mmio` makes it mandatory (section 15.1): "
			                   "it decides whether a narrow field can be written "
			                   "without touching its neighbours",
			                   f"`access_width = {settings.width};` forbids partial "
			                   "access, which is the common case"])

		return ast.StructDecl(
			span     = span,
			name     = name.text,
			members  = tuple(members),
			register = ast.RegisterInfo(
				address      = address,
				width        = settings.width,
				access_width = settings.access_width,
				volatile     = settings.volatile,
				no_rmw       = settings.no_rmw,
			),
		)

	def parse_register_block(self) -> list[ast.Decl]:
		"""`register_block dma { width = 32; register a @ 0 { ... } }`

		Scoped defaults and nothing else (section 15.2): the block declares
		`width`, `access_width` and the flags once, and the registers inside
		inherit them. It is not a namespace and not a layout -- it disappears
		here, leaving the registers it contained.
		"""
		start = self.advance()
		self.expect_ident("a register block name")
		self.expect_symbol("{", "to open the register block")

		settings = _RegisterDefaults()
		found: list[ast.Decl] = []

		while not self.current.is_symbol("}"):
			if self.current.kind is TokenKind.EOF:
				raise error("unexpected end of file inside a register block",
				            self.current.span, label="expected `}`")
			if self._is_register_setting():
				self.parse_register_setting(settings)
			elif self.current.is_ident("register"):
				found.append(self.parse_register(settings))
			else:
				raise error(
					f"expected a register or a default, found "
					f"{self.current.describe()}",
					self.current.span,
					label = "a register block holds registers and scoped defaults",
					notes = ["`width`, `access_width`, `volatile` and `no_rmw` may "
					         "be declared once for every register in the block "
					         "(project.md section 15.2)"],
				)

		self.expect_symbol("}", "to close the register block")

		if not found:
			raise error("a register block declares no registers",
			            self.span_from(start), label="nothing to scope")
		return found

	def _is_register_setting(self) -> bool:
		return (self.current.kind is TokenKind.IDENT
		        and self.current.text in REGISTER_SETTINGS)

	def parse_register_setting(self, settings: _RegisterDefaults) -> None:
		token = self.advance()

		if token.text in ("volatile", "no_rmw"):
			setattr(settings, token.text, True)
		else:
			self.expect_symbol("=", f"after `{token.text}`")
			where = self.current
			value = evaluate_literal(self.parse_expr())
			if value is None or value <= 0:
				raise error(f"`{token.text}` needs a positive literal", where.span)
			setattr(settings, token.text, value)

		self.expect_symbol(";", f"after `{token.text}`")

	def parse_namespace(self) -> ast.NamespaceDecl:
		"""`namespace outer { struct Header { ... } }`

		A block rather than a positional directive, deliberately. A repeated
		positional form would have to answer what a second one does to the
		declarations before it, and `endian` already answers that question the
		other way -- the last one wins, file-wide. Braces make the scope visible
		instead of arguable, and they are what the word means to anyone who has
		met C++. See doc/decision/0012-namespaces.md.
		"""
		start = self.advance()
		name  = self.expect_ident("a namespace name")
		self.expect_symbol("{", "to open the namespace")

		decls: list[ast.Decl] = []
		while not self.current.is_symbol("}"):
			if self.current.kind is TokenKind.EOF:
				raise error(
					"unexpected end of file inside a namespace",
					self.current.span,
					label = "expected `}`",
				)
			if self.current.is_ident("namespace"):
				raise not_yet_implemented(
					"a nested `namespace`", self.current.span, 12,
					notes = ["one level is supported; nesting needs the path "
					         "resolution rules of a later phase",
					         "a qualified name is written `outer::Header`"])
			decls.append(self.parse_decl())

		self.expect_symbol("}", "to close the namespace")
		return ast.NamespaceDecl(self.span_from(start), name.text, decls)

	def parse_strictness(self) -> ast.StrictnessDirective:
		"""`strictness = lenient;` (section 14.5).

		Spelled with `=` because it is a policy rather than a property of the
		data: `endian big` describes the bytes, `strictness = lenient` describes
		what the parser will put up with.
		"""
		start = self.advance()
		self.expect_symbol("=", "after `strictness`")
		token = self.expect_ident("a strictness")
		level = STRICTNESS.get(token.text)
		if level is None:
			raise error(
				f"unknown strictness `{token.text}`",
				token.span,
				label = "expected `strict` or `lenient`",
				notes = ["`strict` is the default and needs no directive; "
				         "`lenient` sets `canonical = NonCanonical` for the schema "
				         "(project.md section 14.5)"],
			)
		self.expect_symbol(";", "after the strictness directive")
		return ast.StrictnessDirective(self.span_from(start), level)

	def parse_bit_order(self) -> ast.BitOrderDirective:
		start = self.advance()
		token = self.expect_ident("a bit order")
		order = BIT_ORDERS.get(token.text)
		if order is None:
			raise error(
				f"unknown bit order `{token.text}`",
				token.span,
				label = "expected `msb_first` or `lsb_first`",
			)
		self.expect_symbol(";", "after the bit_order directive")
		return ast.BitOrderDirective(self.span_from(start), order)

	def parse_encoding(self) -> ast.EncodingDirective:
		"""`encoding utf8;` or `encoding ascii | iso8859_1;`.

		The `|` is the same alternation `[must_eq]` already takes and that
		`until` takes below: one spelling for "any of these", so a reader who
		has met it once has met all three.
		"""
		start = self.advance()
		names: list[str] = []
		while True:
			token = self.expect_ident("an encoding")
			if token.text not in TEXT_ENCODINGS:
				raise error(
					f"unknown encoding `{token.text}`",
					token.span,
					label = "not an encoding this compiler knows",
					notes = ["the encodings are "
					         + ", ".join(f"`{name}`"
					                     for name in sorted(TEXT_ENCODINGS)),
					         "a character literal is accepted only where every "
					         "one of them gives it the same single code unit, "
					         "so declaring several is a check rather than a "
					         "hedge"],
				)
			if token.text in names:
				raise error(
					f"`{token.text}` is listed twice",
					token.span,
					label = "already named",
				)
			names.append(token.text)
			if self.accept_symbol("|") is None:
				break

		self.expect_symbol(";", "after the encoding directive")
		self.encodings = tuple(names)
		return ast.EncodingDirective(self.span_from(start), self.encodings)

	def parse_whitespace(self) -> ast.WhitespaceDirective:
		"""`whitespace ' ' | '\\t' | '\\r' | '\\n';`

		The same alternation `encoding` and `until` take, and two refusals
		of its own: a repeat says nothing twice, and an alternative wider
		than a byte is a construct `skip` does not have.
		"""
		start = self.advance()
		values, shown = self._byte_set("the whitespace set")
		self.expect_symbol(";", "after the whitespace directive")
		self.whitespace       = values
		self.whitespace_shown = shown
		return ast.WhitespaceDirective(self.span_from(start), values, shown)

	def _byte_set(self, what: str) -> tuple[tuple[int, ...], tuple[str, ...]]:
		"""`' ' | '\\t'` -- single bytes, alternated, each written once.

		Bytes rather than strings, which is what separates this from
		`parse_until`. A skip is a membership test repeated -- while the
		next byte is one of these -- so a two-byte alternative would be a
		repeated match of a SEQUENCE, and situ has no such construct. Saying
		so at the literal is what makes the refusal readable: the character
		is named, and so is the encoding that gave it two bytes.
		"""
		values: list[int] = []
		shown: list[str]  = []
		seen: dict[int, Span] = {}

		while True:
			token = self.current

			if token.kind is TokenKind.CHAR:
				self.advance()
				raw = self._character_bytes(token)
				spelling = _spelled(token.text, "'")
			elif token.kind is TokenKind.STRING:
				self.advance()
				raw = token.text.encode("latin-1")
				spelling = _spelled(token.text, '"')
			else:
				raise error(
					f"{what} is written as characters",
					token.span,
					label = "expected a character",
					notes = ["`whitespace ' ' | '\\t' | '\\r' | '\\n';` -- "
					         "the bytes that may stand between tokens",
					         "one byte per alternative: this is a set a byte "
					         "is tested against, not a sequence to match"],
				)

			if len(raw) != 1:
				raise error(
					f"{spelling} is {len(raw)} bytes, and a skip tests one",
					token.span,
					label = f"{len(raw)} byte(s) under this file's encodings",
					notes = ["a skip runs while the NEXT BYTE is in the set, "
					         "so an alternative wider than a byte would be a "
					         "sequence to match rather than a set to test",
					         "the encodings are "
					         + " | ".join(self.encodings)],
				)
			byte = raw[0]
			if byte in seen:
				raise error(
					f"{spelling} is listed twice",
					token.span,
					label = "already in the set",
					notes = ["a byte is in the set or it is not, so a repeat "
					         "changes nothing and is more likely a typo"],
				)
			seen[byte] = token.span
			values.append(byte)
			shown.append(spelling)

			if self.accept_symbol("|") is None:
				break

		return tuple(values), tuple(shown)

	def parse_skip(self) -> ast.Skip | None:
		"""`skip`, or `skip ' ' | '\\t'`.

		A soft keyword in this one position, read the way `before` and `at`
		are, so no schema that used the word as a name stops parsing. The
		bare form means the file's `whitespace` set and is refused where
		there is none -- a default nobody declared is exactly the assumption
		the directive exists to remove.
		"""
		if not self.current.is_ident("skip"):
			return None

		start = self.advance()
